      the attributes of those subclasses.
    
    - Your cries have been heard: removing a pending item from an
      attribute or collection with delete-orphan expunges the item
      from the session; no FlushError is raised.  Note that if you
      session.save()'ed the pending item explicitly, the
      attribute/collection removal still knocks it out.

    - Fixed potential generative bug when the same Query was used
      to generate multiple Query objects using join().

    - fixed bug which was introduced in 0.4.3, whereby loading an
      already-persistent instance mapped with joined table inheritance
      would trigger a useless "secondary" load from its joined 
      table, when using the default "select" polymorphic_fetch.  
      This was due to attributes being marked as expired
      during its first load and not getting unmarked from the 
      previous "secondary" load.  Attributes are now unexpired
      based on presence in __dict__ after any load or commit
      operation succeeds.
      
    - deprecated Query methods apply_sum(), apply_max(), apply_min(),
      apply_avg().  Better methodologies are coming....
      
    - Added a new "higher level" operator called "of_type()": used
      in join() as well as with any() and has(), qualifies the
      subclass which will be used in filter criterion, e.g.:

        query.filter(Company.employees.of_type(Engineer).
          any(Engineer.name=='foo'))

        or

        query.join(Company.employees.of_type(Engineer)).
          filter(Engineer.name=='foo')

    - Preventive code against a potential lost-reference bug in
      flush().

    - Expressions used in filter(), filter_by() and others, when
      they make usage of a clause generated from a relation using
      the identity of a child object (e.g.,
      filter(Parent.child==<somechild>)), evaluate the actual
      primary key value of <somechild> at execution time so that
      the autoflush step of the Query can complete, thereby